--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@bull-board/express": "^4.0.0",
     "bull": "^4.8.4",
     "discord.js": "^13.8.0",
+    "express": "^4.18.1",
     "node-fetch": "^2.6.7"
   },
   "devDependencies": {
