--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bull": "^4.8.4",
     "discord.js": "^13.8.0",
     "express": "^4.18.1",
+    "i18next": "^21.8.10",
+    "i18next-fs-backend": "^1.1.4",
     "node-fetch": "^2.6.7"
   },
   "devDependencies": {
