--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@bull-board/express": "^4.0.0",
+    "@discordjs/builders": "^0.15.0",
+    "@discordjs/rest": "^0.5.0",
     "bull": "^4.8.4",
+    "discord-api-types": "^0.35.0",
     "discord.js": "^13.8.0",
     "express": "^4.18.1",
     "node-fetch": "^2.6.7"
